# efficient_llm_safety_benchmarking

./: .gitignore  README.md  notices.txt  pyproject.toml
data/irt_input_data/: helm_antredteam_irt_data.jsonl  helm_harmbench_irt_data.jsonl  helm_simplesafety_irt_data.jsonl  strongREJECT_irt_data.jsonl  wmdp_irt_data.jsonl
data/static_selection_output_data/: helm_simplesafety_100samples_test10_4bquant_minvar0.01_step20_items.csv
fluid_benchmarking/: config.py  datasets.py  engine.py  estimators.py  evaluation.py  irt_utils.py
irt-fit/: fit_irt_model.py  two_param_logistic.py
subset_selection/: anchor_point_benchmark.py  disco.py  evaluation.py  fisher.py  fluid_benchmarking.py  input_files_paths.sh  irt.py  select_subset.py  split.py  subset_predictors.py  subset_selection_plots.ipynb  utils.py
